Fix layout issues

--- a/src/public/css/achievements.css
+++ b/src/public/css/achievements.css
@@ -33,7 +33,7 @@
 }
 
 .h-85 {
-  height: 85% !important;
+  height: 90% !important;
 }
 
 .progress {
